# AFM-IR_spectra_processing

./: .zenodo.json  CITATION.cff  IR_spectra_processing.py  README.md  pyproject.toml  requirements.txt
